syntax = "proto3";

package license;
option go_package = "github.com/pachyderm/pachyderm/src/client/license";

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "client/enterprise/enterprise.proto";

message ActivateRequest {
  // activation_code is a Pachyderm enterprise activation code. New users can
  // obtain trial activation codes
  string activation_code = 1;

  // expires is a timestamp indicating when this activation code will expire.
  // This should not generally be set (it's primarily used for testing), and is
  // only applied if it's earlier than the signed expiration time in
  // 'activation_code'.
  google.protobuf.Timestamp expires = 2;
}

message ActivateResponse {
  enterprise.TokenInfo info = 1;
}

message GetActivationCodeRequest {}

message GetActivationCodeResponse {
  enterprise.State state = 1;
  enterprise.TokenInfo info = 2;
  string activation_code = 3;
}

message DeactivateRequest{}
message DeactivateResponse{}

message AddClusterRequest {
  // id is the unique, immutable identifier for this cluster
  string id = 1;
  // name is a modifiable description of the cluster
  string name = 2;
  // address is the public GPRC address where the cluster can be reached
  string address = 3;
  // If set, secret specifies the shared secret this cluster will use
  // to authenticate to the license server. Otherwise a secret will be
  // generated and returned in the response. 
  string secret = 4;
}
message AddClusterResponse {
  string secret = 1;
}

message DeleteClusterRequest {
  string id = 1;
}
message DeleteClusterResponse {}

message ClusterStatus {
  string id = 1;
  string name = 2;
  string address = 3;
  string version = 4;
  bool auth_enabled = 5 [(gogoproto.moretags) = "db:\"auth_enabled\""];
  google.protobuf.Timestamp last_heartbeat = 6 [(gogoproto.moretags) = "db:\"last_heartbeat\"", (gogoproto.stdtime) = true]; 
  google.protobuf.Timestamp created_at = 7 [(gogoproto.moretags) = "db:\"created_at\"", (gogoproto.stdtime) = true]; 
}

message UpdateClusterRequest {
  string id = 1;
  string name = 2;
  string address = 3;
}
message UpdateClusterResponse{}

message ListClustersRequest {}
message ListClustersResponse {
  repeated ClusterStatus clusters = 1;  
}

message DeleteAllRequest{}
message DeleteAllResponse {}

message HeartbeatRequest {
  string id = 1;
  string secret = 2;
  string version = 3;
  bool auth_enabled = 4;
}

message HeartbeatResponse {
  enterprise.LicenseRecord license = 1;
}

service API {
  // Activate enables the license service by setting the enterprise activation
  // code to serve.
  rpc Activate(ActivateRequest) returns (ActivateResponse) {}
  rpc GetActivationCode(GetActivationCodeRequest) returns (GetActivationCodeResponse) {}

  // DeleteAll deactivates the server and removes all data.
  rpc DeleteAll(DeleteAllRequest) returns (DeleteAllResponse) {}

  // CRUD operations for the pachds registered with this server.
  rpc AddCluster(AddClusterRequest) returns (AddClusterResponse) {}
  rpc DeleteCluster(DeleteClusterRequest) returns (DeleteClusterResponse) {}
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {}
  rpc UpdateCluster(UpdateClusterRequest) returns (UpdateClusterResponse) {}

  // Heartbeat is the RPC registered pachds make to the license server
  // to communicate their status and fetch updates.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

